dr01-python-microservices6/kiala/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripkiada
spec:
  stripPrefix:
    prefixes:
      - "/kiada"
