dr01-python-microservices6/kiala/deployment.yaml
# Exposing services in a K3S/K3D cluster with Traefik, By Ivan Krizsan | July 12, 2024 
# https://www.ivankrizsan.se/2024/07/12/exposing-services-in-a-k3s-k3d-cluster-with-traefik/
#
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kiada
  name: kiada
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiada
  template:
    metadata:
      labels:
        app: kiada
    spec:
      containers:
      - image: luksa/kiada:0.1
        imagePullPolicy: IfNotPresent
        name: kiada
